# qt

./: .gitignore
QuickPad/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
QuickPad 2/: mainwindow.ui
QuickPad/.qtcreator/: CMakeLists.txt.user.6bec6a1
converter 2/: CMakeLists.txt  converter.cpp  mainwindow.cpp  mainwindow.h
pr1 scoreboard/: mainwindow.cpp
pr10 TypingTrainer (final)/: mainwindow.cpp  mainwindow.h  mainwindow.ui
pr10 TypingTrainer (final)/lessons/: common_words_2.txt
pr2 converter/: CMakeLists.txt  mainwindow.ui
pr3 converter (final)/: converter.h  mainwindow.ui
pr4 QuickPad/: mainwindow.h
pr5 QuickPad (final)/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
pr6 TypingTrainer/: mainwindow.ui
pr7 TypingTrainer/: mainwindow.cpp  mainwindow.h  mainwindow.ui
pr8 TypingTrainer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
pr8 TypingTrainer/lessons/: numbers_symbols.txt
pr9 TypingTrainer/: mainwindow.cpp  mainwindow.h  mainwindow.ui
pr9 TypingTrainer/lessons/: common_words_1.txt  python_code.txt  starter_text.txt
scoreboard/: .gitignore  CMakeLists.txt  mainwindow.h  mainwindow.ui
